deploy/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: peltr
  name: peltr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peltr-server
  namespace: peltr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peltr-server
  template:
    metadata:
      labels:
        app: peltr-server
    spec:
      containers:
        - name: peltr-server
          imagePullPolicy: Always
          image: gideonw/peltr:latest
          args: ["server"]
          ports:
            - name: web
              containerPort: 8010
            - name: tcp
              containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peltr-worker
  namespace: peltr
spec:
  replicas: 10
  selector:
    matchLabels:
      app: peltr-worker
  template:
    metadata:
      labels:
        app: peltr-worker
    spec:
      containers:
        - name: peltr-worker
          imagePullPolicy: Always
          image: gideonw/peltr:latest
          args: ["worker", "--host=peltr-server.peltr.svc.cluster.local"]
          ports:
            - name: web
              containerPort: 8010
---
kind: Service
apiVersion: v1
metadata:
  name: peltr-server-api
  namespace: peltr
  labels:
    app: peltr-server
spec:
  selector:
    app: peltr-server
  ports:
    - name: web
      port: 8010
---
kind: Service
apiVersion: v1
metadata:
  name: peltr-server
  namespace: peltr
  labels:
    app: peltr-server
spec:
  selector:
    app: peltr-server
  ports:
    - name: tcp
      port: 8000
---
kind: Service
apiVersion: v1
metadata:
  name: peltr-worker
  namespace: peltr
  labels:
    app: peltr-worker
spec:
  selector:
    app: peltr-worker
  ports:
    - name: web
      port: 8010
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peltr
  namespace: peltr
spec:
  rules:
    - host: peltr.localhost
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: "peltr-server-api"
                port:
                  name: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peltr-worker
  namespace: peltr
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: peltr.localhost
      http:
        paths:
          - pathType: Prefix
            path: "/wrk(/|$)(.*)"
            backend:
              service:
                name: "peltr-worker"
                port:
                  name: web
